--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Teleklasa.Lokalni.Pl - Panel Lekcji</title>
+    <title>TeleKlasa (teleklasa.lokalni.pl) - Panel Lekcji</title>
   </head>
   <body>
     <noscript>
